Kubernetes_Version/advertisement-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advertisement
  labels:
    app: advertisement
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: advertisement
  template:
    metadata:
      labels:
        app: advertisement
    spec:
      containers:
      - name: advertisement
        imagePullPolicy: IfNotPresent #Never
        image: soberservicesguy/portfolio-images:socialapp_advertisement_44
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5002
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: advertisements-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: advertisement
  ports:
    - protocol: TCP
      targetPort: 5002
      port: 5002
