Kubernetes_Version/friends-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends
  labels:
    app: friends
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: friends
  template:
    metadata:
      labels:
        app: friends
    spec:
      containers:
      - name: friends
        image: soberservicesguy/portfolio-images:socialapp_friends_14
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5005
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: friends-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: friends
  ports:
    - protocol: TCP
      targetPort: 5005
      port: 5005
