Kubernetes_Version/notifications-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  labels:
    app: notifications
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
      - name: notifications
        image: soberservicesguy/portfolio-images:socialapp_notifications_30
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5006
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: notifications
  ports:
    - protocol: TCP
      targetPort: 5006
      port: 5006
