Kubernetes_Version/pages-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pages
  labels:
    app: pages
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: pages
  template:
    metadata:
      labels:
        app: pages
    spec:
      containers:
      - name: pages
        imagePullPolicy: 'IfNotPresent' #Never      
				image: socialapp_pages:latest
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5007
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: pages-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: pages
  ports:
    - protocol: TCP
      targetPort: 5007
      port: 5007
