Kubernetes_Version/socialposts-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialposts
  labels:
    app: socialposts
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: socialposts
  template:
    metadata:
      labels:
        app: socialposts
    spec:
      containers:
      - name: socialposts
        image: soberservicesguy/portfolio-images:socialapp_socialposts_5
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: socialposts-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: socialposts
  ports:
    - protocol: TCP
      targetPort: 5001
      port: 5001
