Kubernetes_Version/sports-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports
  labels:
    app: sports
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: sports
  template:
    metadata:
      labels:
        app: sports
    spec:
      containers:
      - name: sports
        image: soberservicesguy/portfolio-images:socialapp_sports_40
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5008
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: sports-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: sports
  ports:
    - protocol: TCP
      targetPort: 5008
      port: 5008
