Kubernetes_Version/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: social-frontend-service
      port:
        number: 80
  rules:
    - host: hello-world.info
    # - host: localhost
      http:
        paths:
          - path: /socialposts/
            pathType: Prefix
            backend:
              service:
                name: socialposts-service
                port:
                  number: 5001

          # - path: /advertisements/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: advertisements-service
          #       port:
          #         number: 5002

          - path: /ad/
            pathType: Prefix
            backend:
              service:
                name: advertisements-service
                port:
                  number: 5002

          - path: /ads/
            pathType: Prefix
            backend:
              service:
                name: advertisements-service
                port:
                  number: 5002

          - path: /books/
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 5003

          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: user-module-service
                port:
                  number: 5004

          - path: /friends/
            pathType: Prefix
            backend:
              service:
                name: friends-service
                port:
                  number: 5005

          # - path: /notifications/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: notifications-service
          #       port:
          #         number: 5006

          - path: /pages/
            pathType: Prefix
            backend:
              service:
                name: pages-service
                port:
                  number: 5007

          - path: /sports/
            pathType: Prefix
            backend:
              service:
                name: sports-service
                port:
                  number: 5006



          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-frontend-service
                port:
                  number: 80
